Bug #50822
qa: testing kernel patch for client metrics causes mds abort
Status:
Resolved
Priority:
High
Assignee:
Category:
Correctness/Safety
Target version:
% Done:
0%
Source:
Q/A
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
2021-05-14T22:04:38.120 INFO:tasks.ceph.mds.c.smithi191.stderr:/build/ceph-17.0.0-4076-ge78e41c7/src/include/cephfs/metrics/Types.h: In function 'std::ostream& operator<<(std::ostream&, const ClientMetricType&)' thread 7f6ba69ed700 time 2021-05-14T22:04:38.116503+0000 2021-05-14T22:04:38.120 INFO:tasks.ceph.mds.c.smithi191.stderr:/build/ceph-17.0.0-4076-ge78e41c7/src/include/cephfs/metrics/Types.h: 56: ceph_abort_msg("abort() called") 2021-05-14T22:04:38.121 INFO:tasks.ceph.mds.c.smithi191.stderr: ceph version 17.0.0-4076-ge78e41c7 (e78e41c7f45263bfc3d22dafa953b7e485aac84d) quincy (dev) 2021-05-14T22:04:38.121 INFO:tasks.ceph.mds.c.smithi191.stderr: 1: (ceph::__ceph_abort(char const*, int, char const*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)+0xe0) [0x7f6ba8ef4640] 2021-05-14T22:04:38.121 INFO:tasks.ceph.mds.c.smithi191.stderr: 2: (operator<<(std::ostream&, ClientMetricType const&)+0x163) [0x7f6ba919c5c3] 2021-05-14T22:04:38.121 INFO:tasks.ceph.mds.c.smithi191.stderr: 3: (MClientMetrics::print(std::ostream&) const+0x179) [0x7f6ba91ca7e9] 2021-05-14T22:04:38.121 INFO:tasks.ceph.mds.c.smithi191.stderr: 4: (DispatchQueue::pre_dispatch(boost::intrusive_ptr<Message> const&)+0x788) [0x7f6ba9140958] 2021-05-14T22:04:38.122 INFO:tasks.ceph.mds.c.smithi191.stderr: 5: (DispatchQueue::fast_dispatch(boost::intrusive_ptr<Message> const&)+0x2d) [0x7f6ba91410cd] 2021-05-14T22:04:38.122 INFO:tasks.ceph.mds.c.smithi191.stderr: 6: (ProtocolV1::handle_message_footer(char*, int)+0x11e7) [0x7f6ba9213e97] 2021-05-14T22:04:38.122 INFO:tasks.ceph.mds.c.smithi191.stderr: 7: /usr/lib/ceph/libceph-common.so.2(+0x5812ba) [0x7f6ba92102ba] 2021-05-14T22:04:38.122 INFO:tasks.ceph.mds.c.smithi191.stderr: 8: (AsyncConnection::process()+0x654) [0x7f6ba91fdbc4] 2021-05-14T22:04:38.123 INFO:tasks.ceph.mds.c.smithi191.stderr: 9: (EventCenter::process_events(unsigned int, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >*)+0x595) [0x7f6ba925f315] 2021-05-14T22:04:38.123 INFO:tasks.ceph.mds.c.smithi191.stderr: 10: /usr/lib/ceph/libceph-common.so.2(+0x5d876a) [0x7f6ba926776a] 2021-05-14T22:04:38.123 INFO:tasks.ceph.mds.c.smithi191.stderr: 11: /lib/x86_64-linux-gnu/libstdc++.so.6(+0xd6d84) [0x7f6ba8b20d84] 2021-05-14T22:04:38.123 INFO:tasks.ceph.mds.c.smithi191.stderr: 12: /lib/x86_64-linux-gnu/libpthread.so.0(+0x9609) [0x7f6ba8c3a609] 2021-05-14T22:04:38.123 INFO:tasks.ceph.mds.c.smithi191.stderr: 13: clone()
From: /ceph/teuthology-archive/pdonnell-2021-05-14_21:45:42-fs-master-distro-basic-smithi/6115753/teuthology.log
Related issues
History
#1 Updated by Xiubo Li over 1 year ago
- Status changed from New to Fix Under Review
- Pull request ID set to 41357
Since we have tolerate unknown metric types in MDS, so we should fix this in MDS code, do not assert when receiving unknown type.
#2 Updated by Patrick Donnelly over 1 year ago
- Category set to Correctness/Safety
- Assignee changed from Jeff Layton to Xiubo Li
- Backport set to pacific
- Component(FS) MDS added
- Component(FS) deleted (
kceph) - Labels (FS) crash added
#3 Updated by Patrick Donnelly over 1 year ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Backport Bot over 1 year ago
- Copied to Backport #50872: pacific: qa: testing kernel patch for client metrics causes mds abort added
#5 Updated by Patrick Donnelly over 1 year ago
- Related to Bug #51067: mds: segfault printing unknown metric added
#6 Updated by Loïc Dachary over 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".
#7 Updated by Radoslaw Zarzynski 8 months ago
- Duplicated by Bug #55906: cephfs/metrics/Types.h: In function 'std::ostream& operator<<(std::ostream&, const ClientMetricType&)' added